--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Gerenciador de Tarefas</title>
 </head>
 <body>
-    <header> 
-        <h1>
-            Vamos traçar seu planejamento
-                <span id="cycling_word"> mensal</span>
-        </h1>
-    </header>
+    <main id="conteiner_principal">
+        <header> 
+            <h1 id="texto_tela_principal">
+                Vamos traçar seu planejamento
+                    <span id="cycling_word"> mensal</span>
+            </h1>
+        </header>
+    </main>
 
-       <script src="script.js"></script>
+    <div id="botao_tela_principal">
+        <button id="botao-personalizado">
+            <span class="material-symbols-outlined">arrow_drop_down_circle</span>
+        </button>
+    </div>
+
+    <script src="script.js"></script>
 
 
 </body>
