ajuste de código

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Gerenciador de Tarefas</title>
 </head>
 <body>
-    <main id="conteiner_principal">
+    <main id="tela_principal">
         <header> 
             <h1 id="texto_tela_principal">
                 Vamos traçar seu planejamento
@@ -23,6 +23,11 @@
             <span class="material-symbols-outlined">arrow_drop_down_circle</span>
         </button>
     </div>
+
+
+    <section id="tela-tarefas">
+
+    </section>
 
     <script src="script.js"></script>
 
