--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
     <title>Gerenciador de Tarefas</title>
 </head>
 <body>
-    <main id="tela_principal">
-        <header> 
-            <h1 id="texto_tela_principal">
-                Vamos traçar seu planejamento
-                    <span id="cycling_word"> mensal</span>
-            </h1>
-        </header>
-    </main>
+    <section>
+        <div id="tela-selecao-escopoDePlanejamento">
 
-    <div id="botao_tela_principal">
-        <button id="botao-personalizado">
-            <span class="material-symbols-outlined">arrow_drop_down_circle</span>
-        </button>
-    </div>
+            <div class="escopo-plano" id="mensal">
+                <h2 class="tipo-escopo"> Mensal</h2>
+                <p class="texto-escopo">Defina suas metas de mais longo prazo como, por exemplo, "terminar 40% do meu projeto".</p>
+            </div>
 
+            <div class="escopo-plano" id="semanal">
+                <h2 class="tipo-escopo"> Semanal</h2>
+                <p class="texto-escopo">Quebre seus objetivos mensais em passos menores, como "desenvolver a tela de login".</p>
+            </div>
 
-    <section id="tela-tarefas">
+            <div class="escopo-plano" id="diario">
+                <h2 class="tipo-escopo"> Diário</h2>
+                <p class="texto-escopo">Foque no que pode ser feito agora.</p>
+            </div>
 
+        </div>
     </section>
 
     <script src="script.js"></script>
