tela agora está escondida, para ser controlado com JS

--- a/index.html
+++ b/index.html
@@ -9,26 +9,30 @@
     <title>Gerenciador de Tarefas</title>
 </head>
 <body>
-    <section>
-        <div id="tela-selecao-escopoDePlanejamento">
+    <div id="esconde-tela">
+        <div id="segunda-tela">
+            <section>
+                <div id="tela-selecao-escopoDePlanejamento">
 
-            <div class="escopo-plano" id="mensal">
-                <h2 class="tipo-escopo"> Mensal</h2>
-                <p class="texto-escopo">Defina suas metas de mais longo prazo como, por exemplo, "terminar 40% do meu projeto".</p>
-            </div>
+                    <div class="escopo-plano" id="mensal">
+                        <h2 class="tipo-escopo"> Mensal</h2>
+                        <p class="texto-escopo">Defina suas metas de mais longo prazo como, por exemplo, "terminar 40% do meu projeto".</p>
+                    </div>
 
-            <div class="escopo-plano" id="semanal">
-                <h2 class="tipo-escopo"> Semanal</h2>
-                <p class="texto-escopo">Quebre seus objetivos mensais em passos menores, como "desenvolver a tela de login".</p>
-            </div>
+                    <div class="escopo-plano" id="semanal">
+                        <h2 class="tipo-escopo"> Semanal</h2>
+                        <p class="texto-escopo">Quebre seus objetivos mensais em passos menores, como "desenvolver a tela de login".</p>
+                    </div>
 
-            <div class="escopo-plano" id="diario">
-                <h2 class="tipo-escopo"> Diário</h2>
-                <p class="texto-escopo">Foque no que pode ser feito agora.</p>
-            </div>
+                    <div class="escopo-plano" id="diario">
+                        <h2 class="tipo-escopo"> Diário</h2>
+                        <p class="texto-escopo">Foque no que pode ser feito agora.</p>
+                    </div>
 
+                </div>
+            </section>
         </div>
-    </section>
+    </div>
 
     <script src="script.js"></script>
 
