--- a/index.html
+++ b/index.html
@@ -3,54 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Gerenciador de Tarefas</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="conteiner-telaPrincipal">
-        <main id="tela_principal">
-            <header> 
-                <h1 id="texto_tela_principal">
-                    Vamos traçar seu planejamento
-                        <span id="cycling_word"> mensal</span>
-                </h1>
+    <div id="conteiner_gerenciador">
+        <aside id="sidebar">
+            <nav id="categoria_tarefas">
+
+                <a href="#" class="tipo_categoria">
+                    <span class="material-symbols-outlined">event</span> Por vir
+                </a>
+                <a href="#" class="tipo_categoria">
+                    <span class="material-symbols-outlined">work</span> Finalizadas
+                </a>
+                <a href="#" class="tipo_categoria">
+                    <span class="material-symbols-outlined">person</span> Atrasadas
+                </a>
+
+            </nav>
+        </aside>
+
+        <main id="areaPrincipal">
+            <header id="escopo_gerenciamento">
+                <select id="escolha_mes" class="mb" name="mes_de_escolha">
+                    <option class="titulo">Janeiro</option>
+                    <option class="titulo">Fevereiro</option>
+                    <option class="titulo">Março</option>
+                    <option class="titulo">Abril</option>
+                    <option class="titulo">Maio</option>
+                    <option class="titulo">Agosto</option>
+                    <option class="titulo">Setembro</option>
+                    <option class="titulo">Outubro</option>
+                    <option class="titulo">Novembro</option>
+                    <option class="titulo">Dezembro</option>
+                </select>
+                <div id="escolhaMes_ou_pesquisa">
+                    <div id="search_bar">
+                        <span class="material-symbols-outlined">search</span>
+                        <input type="text" placeholder="Algo em específico?">
+                    </div>
+                    <button id="botao_perfil">
+                        <span class="material-symbols-outlined">person</span>
+                        <span></span>
+                    </button>
+                </div>
             </header>
-        </main>
 
-        <div id="botao_tela_principal">
-            <button id="botao-transicao-primeiraTela-segundaTela">
-                <span class="material-symbols-outlined">arrow_drop_down_circle</span>
-            </button>
-        </div>
-    </div>
-
-    <div class="esconde-tela" id="segunda-tela_aux">
-        <div id="segunda-tela">
-            <section>
-                <div id="tela-selecao-escopoDePlanejamento">
-
-                    <div class="escopo-plano" id="mensal">
-                        <h2 class="tipo-escopo"> Mensal</h2>
-                        <p class="texto-escopo">Defina suas metas de mais longo prazo como, por exemplo, "terminar 40% do meu projeto".</p>
+            <section id="tarefas">
+                <div class="tarefaEspecifica">
+                    <div class="informacao_tarefa">
+                        <span class="material-symbols-outlined checkbox">radio_button_unchecked</span>
+                        <p class="texto_tarefa">Adicionar tarefa</p>
                     </div>
+                    <button class="botao_adicionaTarefa">
+                        <span class="material-symbols-outlined">add</span>
+                    </button>
+                </div>
 
-                    <div class="escopo-plano" id="semanal">
-                        <h2 class="tipo-escopo"> Semanal</h2>
-                        <p class="texto-escopo">Quebre seus objetivos mensais em passos menores, como "desenvolver a tela de login".</p>
+                <div class="tarefaEspecifica">
+                    <div class="informacao_tarefa">
+                         <span class="material-symbols-outlined checkbox">radio_button_unchecked</span>
+                        <p class="texto_tarefa">Adicionar tarefa</p>
                     </div>
-
-                    <div class="escopo-plano" id="diario">
-                        <h2 class="tipo-escopo"> Diário</h2>
-                        <p class="texto-escopo">Foque no que pode ser feito agora.</p>
+                    <button class="botao_adicionaTarefa">
+                        <span class="material-symbols-outlined">add</span>
+                    </button>
+                </div>
+                
+                <div class="tarefaEspecifica">
+                    <div class="informacao_tarefa">
+                        <span class="material-symbols-outlined checkbox">radio_button_unchecked</span>
+                        <p class="texto_tarefa">Adicionar tarefa</p>
                     </div>
+                    <div class="task-actions">
+                        <button class="botao_adicionaTarefa">
+                            <span class="material-symbols-outlined">add</span>
+                        </button>
+                    </div>
+                </div>
 
+                <div class="tarefaEspecifica">
+                    <div class="informacao_tarefa">
+                        <span class="material-symbols-outlined checkbox">radio_button_unchecked</span>
+                        <p class="texto_tarefa">Adicionar tarefa</p>
+                    </div>
+                     <div class="task-actions">
+                        <button class="botao_adicionaTarefa">
+                            <span class="material-symbols-outlined">add</span>
+                        </button>
+                    </div>
+                </div>
+
+                 <div class="tarefaEspecifica">
+                    <div class="informacao_tarefa">
+                        <span class="material-symbols-outlined checkbox">radio_button_unchecked</span>
+                        <p class="texto_tarefa">Adicionar tarefa</p>
+                    </div>
+                     <div class="task-actions">
+                        <button class="botao_adicionaTarefa">
+                            <span class="material-symbols-outlined">add</span>
+                        </button>
                 </div>
             </section>
-        </div>
+        </main>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
