troca do texto de escopo está completa

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                         <option class="titulo">Março</option>
                         <option class="titulo">Abril</option>
                         <option class="titulo">Maio</option>
+                        <option class="titulo">Junho</option>
+                        <option class="titulo">Julho</option>
                         <option class="titulo">Agosto</option>
                         <option class="titulo">Setembro</option>
                         <option class="titulo">Outubro</option>
@@ -42,7 +44,7 @@
                         <option class="titulo">Dezembro</option>
                     </select>
                 </div>
-                
+
                 <div id="trocaEscopo">
                     <button>
                         <span class="botao_trocaEscopo">Mensal</span>
