salvmento de estado pela sessão atual adicionado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div id="conteiner-telaPrincipal">
+    <div class="conteiner_tela" id="conteiner-telaPrincipal">
             <main id="tela_principal">
                 <header> 
                     <h1 id="texto_tela_principal">
@@ -29,7 +29,7 @@
             </div>
     </div>
 
-    <div class="esconde-tela" id="segunda-tela_aux">
+    <div class="esconde-tela conteiner_tela" id="segunda-tela_aux">
         <div id="segunda-tela">
             <section>
                 <div id="tela-selecao-escopoDePlanejamento">
@@ -48,14 +48,20 @@
                         <h2 class="tipo-escopo"> Diário</h2>
                         <p class="texto-escopo">Foque no que pode ser feito agora.</p>
                     </div>
-
+                    
                 </div>
             </section>
         </div>
     </div>
 
-    <div class="escondeTela" id="telaTarefas_aux">
+    <div class="escondeTela conteiner_tela" id="telaTarefas_aux">
         <div id="telaTarefas">
+            <!--<div id="botao_retorna">
+                <button>
+                    <span class="material-symbols-outlined">arrow_circle_left</span>
+                </button>
+            </div>!-->
+
             <div id="conteiner_gerenciador">
                 <aside id="sidebar">
                     <nav id="categoria_tarefas">
